# figcone_ini

./: CMakeLists.txt
.github/workflows/: release.yml
release_pack/: CMakeLists.txt  release.sh
src/: parser.cpp
tests/: CMakeLists.txt
